--- a/public/assets/public/css/sanpham.css
+++ b/public/assets/public/css/sanpham.css
@@ -1,5 +1,3 @@
-
-
 .sidebar {
     padding: 20px;
     background-color: #f8f9fa;
@@ -30,7 +28,7 @@
     object-fit: cover; 
 }
 
-.product-title {
+.product-title a{
     margin-bottom: 3px;
     font-size: 20px;
     line-height: 30px;
@@ -38,11 +36,14 @@
     transition: color ease 0.3s;
     font-family: "Quicksand", sans-serif;
     font-weight: 700;
-    text-rendering: optimizeLegibility
+    text-rendering: optimizeLegibility;
+    color: #080808;
+    
 
 }
-.product-title:hover{
+.product-title a:hover{
    color: #f28500;
+   text-decoration: none;
 
 }
 
@@ -61,8 +62,31 @@
 }
 
 .product-rating {
-    margin: 10px 0;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 5px;
 }
+
+.star-list {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+   
+    gap: 2px;
+}
+
+.star-list li {
+    font-size: 14px;
+    color: #080808; 
+}
+
+.product-rating span {
+    font-size: 14px;
+    color: #787878;
+}
+
 
 .product-stock {
     font-size: 16px;
