--- a/public/assets/public/css/chitiet.css
+++ b/public/assets/public/css/chitiet.css
@@ -59,13 +59,23 @@
     max-width: 100%;
     border-radius: 10px;
 }
-
 .product-price {
-    color: #ff642f;
-    font-weight: 700;
-    font-size: 20px;
-    font-family: "Quicksand", sans-serif;
+    /* Các thuộc tính khác của .product-price */
 }
+
+.sale-price {
+    color: red; /* Màu chữ cho giá bán */
+    font-weight: bold; /* Làm chữ đậm nếu cần */
+    text-decoration: none; /* Đảm bảo không có gạch chân */
+}
+
+.old-price {
+    color: red; /* Màu chữ cho giá cũ */
+    text-decoration: line-through; /* Gạch chân cho giá cũ */
+}
+
+
+
 
 .star-rating {
     color: gold;
