--- a/public/assets/public/layout/Admin/css/thongkesanphamban.css
+++ b/public/assets/public/layout/Admin/css/thongkesanphamban.css
@@ -1,30 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Quicksand", sans-serif;
     background-color: #f8f9fa;
 }
 .sidebar {
-    background-color: #e3f2fd;
-    height: 100vh;
-    padding-top: 20px;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 250px;
-    overflow-y: auto;
-}
-.sidebar a {
-    color: #000;
+    background-color: #f28500; 
+    height: 1000px;
+    padding: 20px;
+  }
+  .sidebar .text-center {
+    margin-bottom: 20px;
+  }
+  .sidebar a {
+    color: #fff;
     text-decoration: none;
     display: block;
     padding: 10px 20px;
     font-size: 16px;
-}
-.sidebar a:hover {
-    background-color: #d1ecf1;
-}
-.sidebar a i {
-    margin-right: 10px;
+    transition: background-color 0.3s;
+  }
+  .sidebar a:hover {
+    background-color: #f19b31;
+  }
+  .sidebar a.active {
+    background-color: #f19b31; 
+    font-weight: bold;
+  }
+  .main-heading-admin{
+  font-size: 36px;
+  letter-spacing: -0.02em;
+  line-height: 1.2;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  color: #fff;
 }
 .content {
     margin-left: 250px;
@@ -37,27 +44,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.header .search-bar {
-    flex-grow: 1;
-    margin-left: 20px;
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-}
-.header .search-bar input {
-    width: 100%;
-    padding: 5px 10px;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-    margin-right: 10px;
-}
-.header .search-bar button {
-    background-color: #000;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
 }
 .header .user-info {
     display: flex;
@@ -72,6 +58,37 @@ body {
 .header .user-info i {
     margin: 0 10px;
     cursor: pointer;
+}
+.search-bar-container {
+    background-color: #e3f2fd;
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+   
+}
+.search-bar {
+    flex-grow: 1;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+   
+}
+.search-bar input {
+    width: 600px;
+    padding: 5px 10px;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+.search-bar button {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
 }
 .table-container {
     background-color: #fff;
